# MLOps_Labs

.github/workflows/: nbstripout-auto.yml
lab01/: lab01a_01_tensor_tutorial.ipynb  lab01a_02_autograd_tutorial.ipynb  lab01a_03_neural_networks_tutorial.ipynb  lab01a_04_cifar10_tutorial.ipynb  lab01b.ipynb  lab01c.ipynb  lab01c_sol.ipynb
lab02/: chatbot.py  env.yaml
lab02/notebooks/: transformers.ipynb
lab03/: diffusion.ipynb  mlflow_tracking.ipynb  pyproject.toml  ray_tune.ipynb  ray_tune_solution.ipynb
lab06/notebooks/: synthetic_data.ipynb
lab07/notebooks/: adversarial_attack_detection.ipynb  adversarial_attack_detection_solution.ipynb
