[project]
name = "lab03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "data-morph-ai>=0.3.1",
    "hebo>=0.3.6",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "mlflow>=3.10.1",
    "prophet>=1.3.0",
    "ray[tune]>=2.54.0",
    "torch>=2.10.0",
]
